added the data directory

--- a/RunSubClub/app/build.gradle
+++ b/RunSubClub/app/build.gradle
@@ -38,6 +38,9 @@ android {
             renderscriptDebuggable false
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+    }
 }
 //productFlavors {
 //}
