--- a/RunSubClub/app/build.gradle
+++ b/RunSubClub/app/build.gradle
@@ -22,9 +22,12 @@ android {
         applicationId "com.coreyjames.runsubclub"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
@@ -37,9 +40,14 @@ android {
 //            signingConfig signingConfigs.config
             renderscriptDebuggable false
         }
+        debug {
+            debuggable true
+            jniDebuggable false
+        }
     }
     compileOptions {
         sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 //productFlavors {
